# framesleuth

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  runbook.md
.github/workflows/: ci.yml
docs/: capabilities.md  use-with-vscode-and-claude.md  web-integration.md
docs/logo/: preview.html
framesleuth/: actions.py  config.py  errors.py  prompts.py  render.py  schemas.py
framesleuth/eval/: __init__.py  harness.py
framesleuth/jobs/: retention.py  store.py
framesleuth/mcp_server/: server.py  videobug_mcp.py
framesleuth/orchestrator/: graph.py
framesleuth/pipeline/: asr.py  bug_extract.py  confidence.py  dedup.py  gif.py  grounding.py  html_render.py  ocr.py  overlay.py  redact.py  scenes.py  understand.py
framesleuth/service/: api.py
postman/: Framesleuth.postman_collection.json  README.md
scripts/: dev_up.sh  doctor.py  download_models.py
tests/: test_asr_pipeline.py  test_build_features.py  test_dedup.py  test_eval_harness.py  test_extract_classify_redact_grounding.py  test_general_video.py  test_grounding_quality.py  test_html_render.py  test_jobs_store.py  test_mcp_server.py  test_orchestrator_graph.py  test_overlay_ocr.py  test_redact.py  test_retention.py  test_service_api.py
